[package]
name = "giuroll-injector"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "giuroll_loader_dll"
path = "src/giuroll_loader_dll.rs"
crate-type = ["cdylib"]

[[bin]]
name = "giuroll_loader"
path = "src/main.rs"

[dependencies]
winapi = { version = "0.3", features = ["minwindef", "winnt", "libloaderapi", "processthreadsapi", "memoryapi", "errhandlingapi", "handleapi", "tlhelp32", "synchapi", "winbase", "winerror", "winuser"] }
widestring = "0.4.3"

[build-dependencies]
embed-resource = "2.4"

[profile.release]
# Optimize for size - smaller binaries are less suspicious
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
